# soniq3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/: soniq3d_bindings.cpp
src/: Engine.cpp  Engine.h
test/: test_script.py
